# crawmatic

./: .dockerignore  .env.example  .gitignore  MUSHTRYATI_SCRAPE_TEST_REPORT.md  PLAN_DOMAIN_STRATEGY_PROFILES.md  PROJECT_SPEC.md  README.md  alembic.ini  docker-compose.yml  mushtryati_product_matches.json  price_monitor_backend_PROJECT_SPEC_v3_revised.md  pyproject.toml
.claude/: settings.local.json
.specify/: autospec-state.json  autospec.json  extensions.yml  feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
alembic/: env.py
alembic/versions/: 023a24e5717d_smoke_foundation.py  03dec3037c8f_webhook_events_and_endpoints.py  2db33dea5e14_observations_current_prices_tables.py  4a1dca402f78_variant_price_daily_rollups.py  55da7d6d939d_auth_identity_tables.py  851220acab90_access_policies_proxies_tables.py  93511d5f7885_refresh_rules.py  a4f205e8d7de_scrape_profiles_table.py  a6b0234cd4ad_scrape_jobs_targets_tables.py  c2987b29555e_catalog_tables.py  e4a75b48360c_alerts_price_states_tables.py  f30c60cfa2f7_domain_strategy_optimizer_tables.py  f4c8a391d5c9_competitors_matches_tables.py
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: deps.py  errors.py  main.py
apps/api/app/routers/: __init__.py  access_policies.py  alerts.py  api_keys.py  auth.py  competitors.py  domain_access_rules.py  jobs.py  matches.py  product_groups.py  products.py  proxy_providers.py  refresh_rules.py  scrape_profiles.py  strategy.py  variants.py  webhooks.py
apps/api/app/schemas/: __init__.py  access.py  alerts.py  catalog.py  competitors.py  jobs.py  matches.py  refresh_rules.py  scrape_profiles.py  strategy.py  webhooks.py
apps/api/app/services/: __init__.py  access_resolution.py  profile_resolution.py  strategy.py
apps/migrate/: Dockerfile  pyproject.toml
apps/migrate/migrate/: __init__.py
apps/scheduler/: Dockerfile  pyproject.toml
apps/scheduler/app/scheduler/: __init__.py  refresh.py  scheduler_app.py
apps/scrapers/: Dockerfile  pyproject.toml  scrapy.cfg  scrapyd.conf
apps/scrapers-browser/: Dockerfile  docker-entrypoint.sh  pyproject.toml  scrapy.cfg  scrapyd.conf
apps/scrapers-browser/price_monitor_browser/: settings.py
apps/scrapers-browser/price_monitor_browser/spiders/: __init__.py  generic_browser_price_spider.py
apps/scrapers/price_monitor/: settings.py
apps/scrapers/price_monitor/spiders/: __init__.py  generic_price_spider.py
apps/workers/: Dockerfile  pyproject.toml
apps/workers/app/workers/: __init__.py  celery_app.py  tasks_analysis.py  tasks_dispatch.py  tasks_jobs.py  tasks_maintenance.py  tasks_strategy.py  tasks_webhooks.py
libs/scrape-core/: pyproject.toml
libs/scrape-core/scrape_core/: __init__.py  db.py  errors.py  items.py  limiter.py  money_text.py  observability.py  pipelines.py  reactor.py  result_builder.py  robots.py  targets.py  validation.py
libs/scrape-core/scrape_core/browser/: __init__.py  page.py  ssrf.py  variant.py
libs/scrape-core/scrape_core/extraction/: __init__.py  css.py  jsonld.py  pipeline.py  regex.py  result.py
libs/scrape-core/scrape_core/safety/: __init__.py  fetch.py  middleware.py  rejection_registry.py  resolver.py
libs/shared/: pyproject.toml
libs/shared/app_shared/: __init__.py  config.py  database.py  enums.py  ids.py  messaging.py  money.py  pagination.py  redis_client.py  repository.py  task_names.py  url_pattern.py  url_safety.py
libs/shared/app_shared/access/: __init__.py  budget.py  engine.py  repository.py  resolution.py
libs/shared/app_shared/alerts/: __init__.py  engine.py
libs/shared/app_shared/catalog/: __init__.py  consistency.py  default_variant.py  upsert.py
libs/shared/app_shared/jobs/: __init__.py  batching.py  lifecycle.py  nodes.py  scopes.py  service.py  targets.py
libs/shared/app_shared/limiter/: __init__.py  bucket.py  keys.py  limits.py  locks.py
libs/shared/app_shared/maintenance/: __init__.py  partitions.py  registry.py  retention.py  rollups.py  soft_refs.py
libs/shared/app_shared/matches/: __init__.py  upsert.py
libs/shared/app_shared/models/: __init__.py  _smoke.py  access.py  alerts.py  base.py  catalog.py  competitors_matches.py  identity.py  jobs.py  observations.py  refresh_rules.py  rls.py  rollups.py  scrape_profiles.py  strategy.py  webhooks.py
libs/shared/app_shared/profiles/: __init__.py  confidence.py  repository.py  resolution.py  upsert.py  validation.py
libs/shared/app_shared/scheduling/: __init__.py  cadence.py
libs/shared/app_shared/scrapyd/: __init__.py  client.py
libs/shared/app_shared/security/: __init__.py  api_keys.py  encryption.py  jwt.py  last_used.py  passwords.py  rate_limit.py  scopes.py  status_cache.py  tokens.py
libs/shared/app_shared/strategy/: __init__.py  flush.py  promotion.py  rediscovery.py  repository.py  resolution.py  seed.py  stats_buffer.py
libs/shared/app_shared/webhooks/: __init__.py  payloads.py
scripts/: check_single_head.sh  check_workspace_scoping.py  seed_bootstrap.py
specs/001-monorepo-skeleton/: autospec-decisions.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-database-foundation/: autospec-decisions.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-auth-api-keys-workspace-isolation/: autospec-decisions.md  data-model.md  plan.md  quickstart.md  research.md  (+2 more)
(+471 files in other folders)
