[project]
name = "api"
version = "0.1.0"
description = "FastAPI HTTP API service (GET /health only in the skeleton). Must NOT depend on scrapy/twisted/playwright."
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "app_shared",
]

[tool.uv.sources]
app_shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
