[project]
name = "migrate"
version = "0.1.0"
description = "One-shot Alembic migration job. Runs `alembic upgrade head` against MIGRATION_DATABASE_URL (direct-to-Postgres, never the PgBouncer pooler). Must NOT depend on scrapy/twisted/playwright."
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.13,<2",
    "app_shared",
]

[tool.uv.sources]
app_shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["migrate"]
