[project]
name = "scrapers-browser"
version = "0.1.0"
description = "Scrapyd browser node (price_monitor_browser project) using scrapy-playwright; no spiders authored in the skeleton."
requires-python = ">=3.13,<3.14"
dependencies = [
    "scrapy>=2.13,<3",
    "scrapyd>=1.5,<2",
    "scrapy-playwright>=0.0.43",
    "playwright>=1.48,<2",
    "scrape_core",
    "app_shared",
]

[tool.uv.sources]
scrape_core = { workspace = true }
app_shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["price_monitor_browser"]
