[project]
name = "workers"
version = "0.1.0"
description = "Celery worker service; no tasks registered in the skeleton. Must NOT depend on scrapy/twisted/playwright."
requires-python = ">=3.13,<3.14"
dependencies = [
    "celery>=5.5,<6",
    "redis>=5.0,<6",
    "app_shared",
]

[tool.uv.sources]
app_shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
