[project]
name = "scrape_core"
version = "0.1.0"
description = "Shared scraping-side library imported by both Scrapyd app members. May depend on app_shared; app_shared must never depend on this package."
requires-python = ">=3.13,<3.14"
dependencies = [
    "app_shared",
    "parsel>=1.11,<2",
    "twisted>=24.3,<27",
    "scrapy>=2.13,<3",
]

[tool.uv.sources]
app_shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scrape_core"]
