[project]
name = "app_shared"
version = "0.1.0"
description = "Shared cross-cutting library: env config, DB engine/session helpers, Celery task-name constants. MUST NOT depend on scrapy/twisted/playwright or scrape_core."
requires-python = ">=3.13,<3.14"
dependencies = [
    "sqlalchemy>=2.0,<3",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2.6,<3",
    "uuid6>=2025.0.1,<2026",
    "argon2-cffi>=23.1,<24",
    "pyjwt>=2.9,<3",
    "redis>=5.0,<6",
    "requests>=2.34,<3",
    "celery>=5.5,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app_shared"]
